<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>odrive_simple</name>
  <version>0.0.1</version>
  <description>Subscribe to cmd_vel calculate velocities send them to odrive. 
  Use encoder from odrive to publish odom </description>
  <maintainer email="ekenna510@verizon.net">robot</maintainer>
  <license>TODO: License declaration</license>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
